Stop verse selector chapter names wrapping on mobile.

--- a/src/navigation/verse-selector.scss
+++ b/src/navigation/verse-selector.scss
@@ -23,6 +23,7 @@
             display: block;
             padding: 10px;
             padding-right: 25px;
+            white-space: nowrap;
         }
     }
 }
